--- a/example/svc/svc.servA.pksc.conf
+++ b/example/svc/svc.servA.pksc.conf
@@ -1,7 +1,9 @@
-sauce "servA" in "../cmd/grpc-pkscd" use "go-grpc" {
-	allow "client1" svc "Public" rpc { "*" };
-	allow "client2" svc "Restricted" rpc { "CallThere" };
-	allow "client3" svc "Different" rpc { "Shazz" };
-	allow "client3" svc "Public" rpc { "*" };
+daemon "servA" path "../cmd/grpc-pkscd" use go-grpc {
+	pass "client1" on "Public" rpc any;
+	pass "client2" on "Restricted" rpc { "CallThere" };
+	pass "client3" on "Different" rpc { "Shazz" };
+	pass "client3" on "Public" rpc any;
+	pass "servB" on "Porcasse" rpc any;
+	pass any on "Public" rpc any;
 }
 
