--- a/example/svc/svc.servB.pksc.conf
+++ b/example/svc/svc.servB.pksc.conf
@@ -1,3 +1,3 @@
-sauce "servB" in "../cmd/grpc-pkscd" use "go-grpc" {
-	allow "client4" svc "Restricted" rpc { "CallThere" };
+daemon "servB" path "../cmd/grpc-pkscd" use go-grpc {
+	pass "client4" on "Restricted" rpc { "CallThere" };
 }
