--- a/example/svc/svc.servC.pksc.conf
+++ b/example/svc/svc.servC.pksc.conf
@@ -1,3 +1,4 @@
-sauce "servC" in "../cmd/grpc-pkscd" use "go-grpc" {
-	allow "*";
+daemon "servC" path "../cmd/grpc-pkscd" use go-grpc {
+	pass any;
 }
+
