--- a/example/svc/svc.clients.pksc.conf
+++ b/example/svc/svc.clients.pksc.conf
@@ -1,5 +1,6 @@
-sauce "client1" in "../cmd/grpc-pkscc" use "go-grpc"
-sauce "client2" in "../cmd/grpc-pkscc" use "go-grpc"
-sauce "client3" in "../cmd/grpc-pkscc" use "go-grpc"
-sauce "client4" in "../cmd/grpc-pkscc" use "go-grpc"
+daemon "client1" path "../cmd/grpc-pkscc" use go-grpc {}
+daemon "client2" path "../cmd/grpc-pkscc" use go-grpc {}
+daemon "client3" path "../cmd/grpc-pkscc" use go-grpc {}
+daemon "client4" path "../cmd/grpc-pkscc" use go-grpc {}
+
 
