--- a/example/svc/svc.pksc.conf
+++ b/example/svc/svc.pksc.conf
@@ -1,3 +1,4 @@
+// comments this is our Service A
 daemon "servA" path "../cmd/grpc-pkscd" use go-grpc {
 	pass "client1" on "Public" rpc any;
 	pass "client2" on "Restricted" rpc { "CallThere" };
@@ -7,34 +8,20 @@ daemon "servA" path "../cmd/grpc-pkscd" use go-grpc {
 	pass any on "Public" rpc any;
 }
 
+/* 
+ *  this is our Service B in a different comment
+ */
 daemon "servB" path "../cmd/grpc-pkscd" use go-grpc {
 	pass "client4" on "Restricted" rpc { "CallThere" };
 }
 
+/* This is our service C */
 daemon "servC" path "../cmd/grpc-pkscd" use go-grpc {
 }
 
+/* These are our clients... :) */
 daemon "client1" path "../cmd/grpc-pkscc" use go-grpc {}
 daemon "client2" path "../cmd/grpc-pkscc" use go-grpc {}
 daemon "client3" path "../cmd/grpc-pkscc" use go-grpc {}
 daemon "client4" path "../cmd/grpc-pkscc" use go-grpc {}
 
-
-// it blocks by default on go-grpc & go, but does nothing except the CA
-// on go
-/*
-daemon "blahd" path "../path/to/dir" use go-grpc {
-	// BAITS
-	pass "client1" on "Public" rpc "CallProut";
-	pass "client1" on "Public" rpc { "CallThere" };
-	pass "client2" on any rpc { "prout" };
-	pass "client2" on any rpc any;
-
-	pass "client2" on "Key" rpc { "test" };
-	pass any on "Key" rpc { "Create", "Delete" };
-	pass any on "Service" rpc any;
-	pass any on any rpc { "Ping" };
-	pass any;
-	pass "client2"; // implicit any any
-}
-*/
