--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,12 @@ jobs:
         id: get_version
         run: |
             echo "RELEASE_VERSION={GITHUB_REF:10}" >> $GITHUB_ENV
+      - name: Docker Login
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Release Binaries
         uses: goreleaser/goreleaser-action@v2
         with:
