--- a/templates/helpers_common.go.template
+++ b/templates/helpers_common.go.template
@@ -235,7 +235,7 @@ func parseGrpcMethod(fullmethod string) (pkg, svc, call string, err error) {
 			pkg = pkgSvcFields[0]
 			svc = pkgSvcFields[1]
 		case 3:
-			pkg = fmt.Sprintf("%s.%s", pkgSvcFields[0], pkgSvcFields[1])
+			pkg = pkgSvcFields[0]
 			svc = pkgSvcFields[2]
 		default:
 			err = ErrPkscParse
@@ -252,8 +252,6 @@ func parseGrpcMethod(fullmethod string) (pkg, svc, call string, err error) {
 	isAlNum := func(s string) {
 		for i := 0; i < len(s); i++ {
 			switch {
-			case s[i] == 0x2e: // char: .
-				continue
 			case s[i] < 0x30: // char: 0
 				fallthrough
 			case s[i] > 0x7a: // char: z
